--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ nav .fas{
                         <h3>CALCULATOR</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, fugiat assumenda iste ducimus
                             praesentium asperiores r</p>
-                        <a href="calculator2copy.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="CALCULATOR2COPY.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
