--- a/index.html
+++ b/index.html
@@ -569,6 +569,15 @@ nav .fas{
                         <a href="BMI CALCULATOR.HTML"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
+                 <div class="work">
+                    <img src="work3.jpg" alt="">
+                    <div class="layer">
+                        <h3>GREETING CARD MAKER</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, fugiat assumenda iste ducimus
+                            praesentium asperiores r</p>
+                        <a href="greetingcard.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
                 <div class="work">
                     <img src="work-5.jpg" alt="">
                     <div class="layer">
