--- a/index.html
+++ b/index.html
@@ -579,6 +579,15 @@ nav .fas{
                     </div>
                 </div>
                 <div class="work">
+                    <img src="work3.jpg" alt="">
+                    <div class="layer">
+                        <h3>TYPING TEST PAGE</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, fugiat assumenda iste ducimus
+                            praesentium asperiores r</p>
+                        <a href="typing test.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
                     <img src="work-5.jpg" alt="">
                     <div class="layer">
                         <h3>Netflix Website Clone</h3>
