--- a/index.html
+++ b/index.html
@@ -608,10 +608,10 @@ nav .fas{
                 <div class="work">
                     <img src="work-1.jpg" alt="">
                     <div class="layer">
-                        <h3>COLOUR CHANGER</h3>
+                        <h3>MY DICTIONARY</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, fugiat assumenda iste ducimus
                             praesentium asperiores r</p>
-                        <a href="COLOUR CHANGER IN JS.HTML"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="dictionary.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <a href="#" class="btn"> See Mors</a>
