--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ nav .fas{
         <div class="container">
             <div class="row">
                 <div class="about_col1">
-                    <img src="darkp.jpg" alt="">
+                    <img src="dark.jpg" alt="">
                 </div>
                 <div class="about_col2">
                     <h1 class="sub_title">About Me</h1>
@@ -714,3 +714,4 @@ nav .fas{
 </body>
 
 </html>
+
